Add div containers within side board

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
     </head>
 
     <body>
-        <div class="side-board">Side Board</div>
+        <div class="side-board">
+            <div class="logo">Logo</div>
+            <div class="main-nav">Main Nav</div>
+            <div class="settings-nav">Settings Nav</div>
+        </div>
         <div class="header">Header</div>
         <div class="body">Body</div>   
     </body>
