--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <body>
         <div class="side-board">
-            <div class="logo">Logo</div>
+            <div class="logo">
+                <img src="images/dashboard-logo.png" alt="Dashboard logo">
+                <h2>Dashboard</h2>
+            </div>
             <div class="main-nav">Main Nav</div>
             <div class="settings-nav">Settings Nav</div>
         </div>
