--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
     </head>
 
     <body>
-        <div class="side-board">
-            <div class="logo">
-                <img src="images/dashboard-logo.png" alt="Dashboard logo">
-                <h2>Dashboard</h2>
-            </div>
-            <div class="main-nav">Main Nav</div>
-            <div class="settings-nav">Settings Nav</div>
-        </div>
+        <div class="side-board"></div>
         <div class="header">Header</div>
         <div class="body">Body</div>   
     </body>
