Place icons and names of links in sidebar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,45 @@
     </head>
 
     <body>
-        <div class="side-board"></div>
+        <div class="side-board">
+            <img src="images/dashboard-logo.png" alt="dashboard icon">
+            <h2>Dashboard</h2>
+
+            <div class="empty-cell"></div>
+            <div class="empty-cell"></div>
+
+            <img src="images/home.png" alt="home icon">
+            <h4>Home</h4>
+
+            <img src="images/profile.png" alt="profile icon">
+            <h4>Profile</h4>
+
+            <img src="images/message.png" alt="message icon">
+            <h4>Message</h4>
+
+            <img src="images/history.png" alt="history icon">
+            <h4>History</h4>
+
+            <img src="images/tasks.png" alt="tasks icon">
+            <h4>Tasks</h4>
+
+            <img src="images/communities.png" alt="communities icon">
+            <h4>Communities</h4>
+
+            <div class="empty-cell"></div>
+            <div class="empty-cell"></div>
+
+            <img src="images/settings.png" alt="settings icon">
+            <h4>Settings</h4>
+
+            <img src="images/support.png" alt="support icon">
+            <h4>Support</h4>
+
+            <img src="images/privacy.png" alt="privacy icon">
+            <h4>Privacy</h4>
+
+            
+        </div>
         <div class="header">Header</div>
         <div class="body">Body</div>   
     </body>
