Add hyperlinks to sidebar

--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
-            <img src="images/home.png" alt="home icon">
-            <h4>Home</h4>
+            <a href="#"><img src="images/home.png" alt="home icon"></a>
+            <h4><a href="#">Home</a></h4>
 
-            <img src="images/profile.png" alt="profile icon">
-            <h4>Profile</h4>
+            <a href="#"><img src="images/profile.png" alt="profile icon"></a>
+            <h4><a href="#">Profile</a></h4>
 
-            <img src="images/message.png" alt="message icon">
-            <h4>Message</h4>
+            <a href="#"><img src="images/message.png" alt="message icon"></a>
+            <h4><a href="#">Message</a></h4>
 
-            <img src="images/history.png" alt="history icon">
-            <h4>History</h4>
+            <a href="#"><img src="images/history.png" alt="history icon"></a>
+            <h4><a href="#">History</a></h4>
 
-            <img src="images/tasks.png" alt="tasks icon">
-            <h4>Tasks</h4>
+            <a href="#"><img src="images/tasks.png" alt="tasks icon"></a>
+            <h4><a href="#">Tasks</a></h4>
 
-            <img src="images/communities.png" alt="communities icon">
-            <h4>Communities</h4>
+            <a href="#"><img src="images/communities.png" alt="communities icon"></a>
+            <h4><a href="#">Communities</a></h4>
 
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
-            <img src="images/settings.png" alt="settings icon">
-            <h4>Settings</h4>
+            <a href="#"><img src="images/settings.png" alt="settings icon"></a>
+            <h4><a href="#">Settings</a></h4>
 
-            <img src="images/support.png" alt="support icon">
-            <h4>Support</h4>
+            <a href="#"><img src="images/support.png" alt="support icon"></a>
+            <h4><a href="#">Support</a></h4>
 
-            <img src="images/privacy.png" alt="privacy icon">
-            <h4>Privacy</h4>
+            <a href="#"><img src="images/privacy.png" alt="privacy icon"></a>
+            <h4><a href="#">Privacy</a></h4>
 
             
         </div>
