Seperate header into top and bottom portions

--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
 
             
         </div>
-        <div class="header">Header</div>
+        <div class="header">
+            <div class="top">Top</div>
+            <div class="bottom">Bottom</div>
+        </div>
         <div class="body">Body</div>   
     </body>
 </html>
