Add icons to top portion of header

--- a/index.html
+++ b/index.html
@@ -49,7 +49,14 @@
             
         </div>
         <div class="header">
-            <div class="top">Top</div>
+            <div class="top">
+                <input type="text">
+                <img src="images/search.png" alt="search icon">
+                <div><img src="images/notification.png" alt="notification icon"></div>
+                <div><img src="images/account-circle.png" alt="account-circle"></div>
+                <p>Morgan Stanley</p>
+
+            </div>
             <div class="bottom">Bottom</div>
         </div>
         <div class="body">Body</div>   
