Space out icons in top portion of header

--- a/index.html
+++ b/index.html
@@ -50,11 +50,15 @@
         </div>
         <div class="header">
             <div class="top">
-                <input type="text">
-                <img src="images/search.png" alt="search icon">
-                <div><img src="images/notification.png" alt="notification icon"></div>
-                <div><img src="images/account-circle.png" alt="account-circle"></div>
-                <p>Morgan Stanley</p>
+                <div class="search-bar">
+                    <img id="search-icon" src="images/search.png" alt="search icon">
+                    <input type="text">
+                </div>
+                <div class="top-right">
+                    <div><img src="images/notification.png" alt="notification icon"></div>
+                    <div><img src="images/account-circle.png" alt="account-circle"></div>
+                    <p>Morgan Stanley</p>
+                </div>
 
             </div>
             <div class="bottom">Bottom</div>
