Format bottom-left portion of header

--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
                     <div><img src="images/account-circle.png" alt="account-circle"></div>
                     <p>Morgan Stanley</p>
                 </div>
-
             </div>
-            <div class="bottom">Bottom</div>
+            <div class="bottom">
+                <div class="bottom-left">
+                    <div class="img-container"><img src="images/account-circle.png" alt="account icon"></div>
+                    <div class="textbox">
+                        <p>Hi there,</p>
+                        <h4>Morgan Stanley (@morgan)</h4>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="body">Body</div>   
     </body>
