Finish formatting of entire header of dashboard

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                         <h4>Morgan Stanley (@morgan)</h4>
                     </div>
                 </div>
+                <div class="bottom-right">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             </div>
         </div>
         <div class="body">Body</div>   
