Add anchor links to header icons

--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
                     <input type="text">
                 </div>
                 <div class="top-right">
-                    <div><img src="images/notification.png" alt="notification icon"></div>
-                    <div><img src="images/account-circle.png" alt="account-circle"></div>
-                    <p>Morgan Stanley</p>
+                    <a href="#">
+                        <div><img src="images/notification.png" alt="notification icon"></div>
+                    </a>
+                    <a href="#">
+                        <div><img src="images/account-circle.png" alt="account-circle"></div>
+                    </a>
+                    <a href="#">
+                        <p>Morgan Stanley</p>
+                    </a>
                 </div>
             </div>
             <div class="bottom">
@@ -65,7 +71,9 @@
                     <div class="img-container"><img src="images/account-circle.png" alt="account icon"></div>
                     <div class="textbox">
                         <p>Hi there,</p>
-                        <h4>Morgan Stanley (@morgan)</h4>
+                        <a href="#">
+                            <h4>Morgan Stanley (@morgan)</h4>
+                        </a>
                     </div>
                 </div>
                 <div class="bottom-right">
