Organize body container into grid  rows

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                 </div>
             </div>
         </div>
-        <div class="body">Body</div>   
+        <div class="body">
+            <div class="grid-title">
+                <p>Your Projects</p>
+                <p>Announcements</p>
+            </div>
+            <div class="grid-container"></div>
+            <div class="announcements-container"></div>
+            <div class="trending-title"></div>
+            <div class="trending-container"></div>
+        </div>   
     </body>
 </html>
