Format grid within grid container

--- a/index.html
+++ b/index.html
@@ -86,9 +86,28 @@
         <div class="body">
             <div class="grid-title">
                 <p>Your Projects</p>
-                <p>Announcements</p>
+                <p id="announcements-title">Announcements</p>
             </div>
-            <div class="grid-container"></div>
+            <div class="grid-container">
+                <div class="card-container">
+                    <p>a</p>
+                </div>
+                <div class="card-container">
+                    <p>b</p>
+                </div>
+                <div class="card-container">
+                    <p>c</p>
+                </div>
+                <div class="card-container">
+                    <p>d</p>
+                </div>
+                <div class="card-container">
+                    <p>e</p>
+                </div>
+                <div class="card-container">
+                    <p>f</p>
+                </div>
+            </div>
             <div class="announcements-container"></div>
             <div class="trending-title"></div>
             <div class="trending-container"></div>
