Add grid of card panels in body of dashboard

--- a/index.html
+++ b/index.html
@@ -90,22 +90,94 @@
             </div>
             <div class="grid-container">
                 <div class="card-container">
-                    <p>a</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
                 <div class="card-container">
-                    <p>b</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
                 <div class="card-container">
-                    <p>c</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
                 <div class="card-container">
-                    <p>d</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
                 <div class="card-container">
-                    <p>e</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
                 <div class="card-container">
-                    <p>f</p>
+                    <div class="orange-stripe"></div>
+                    <div class="main-card">
+                        <h4>Super Cool Project</h4>
+                        <p>Here is a cool project. Describe it will
+                            all of your heart! Sed tempus ut
+                            lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
+                        </p>
+                    </div>
+                    <div class="card-widgets">
+                        <img src="images/star-plus-outline.png" alt="star plus icon">
+                        <img src="images/eye-plus-outline.png" alt="eye plus icon">
+                        <img src="images/share-variant.png" alt="share variant icon">
+                    </div>
                 </div>
             </div>
             <div class="announcements-container"></div>
