Add announcements text with beginning of white panel

--- a/index.html
+++ b/index.html
@@ -180,7 +180,14 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements-container"></div>
+            <div class="announcements-container">
+                <div class="announcements">
+                    <h4>Site Maintenance</h4>
+                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec 
+                        hendrerit sodales congue...
+                    </p>
+                </div>
+            </div>
             <div class="trending-title"></div>
             <div class="trending-container"></div>
         </div>   
