--- a/index.html
+++ b/index.html
@@ -182,10 +182,23 @@
             </div>
             <div class="announcements-container">
                 <div class="announcements">
-                    <h4>Site Maintenance</h4>
-                    <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec 
-                        hendrerit sodales congue...
-                    </p>
+                    <div>
+                        <h4>Site Maintenance</h4>
+                        <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec
+                            hendrerit sodales congue...</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4>Community Share Day</h4>
+                        <p>Nam vel lectus tincidunt, rutrum nulla eu, ornarere librero. Aliquam dictum accumsan portitior...</p>
+                    </div>
+                    <hr>
+                    <div>
+                        <h4>Updated Privacy Policy</h4>
+                        <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla
+                            sagittis sem in mattis...
+                        </p>
+                    </div>
                 </div>
             </div>
             <div class="trending-title"></div>
