Format titles of projects and annoucements

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@
                     <div class="textbox">
                         <p>Hi there,</p>
                         <a href="#">
-                            <h4>Morgan Stanley (@morgan)</h4>
+                            <b>
+                                <h4>Morgan Stanley (@morgan)</h4>
+                            </b>
                         </a>
                     </div>
                 </div>
@@ -85,14 +87,16 @@
         </div>
         <div class="body">
             <div class="grid-title">
-                <p>Your Projects</p>
-                <p id="announcements-title">Announcements</p>
+                <h4 id="projects-title">Your Projects</h4>
+                <h4 id="announcements-title">Announcements</h4>
             </div>
             <div class="grid-container">
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <b>
+                            <h4>Super Cool Project</h4>
+                        </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
@@ -107,7 +111,9 @@
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <b>
+                            <h4>Super Cool Project</h4>
+                        </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
@@ -122,7 +128,9 @@
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <b>
+                            <h4>Super Cool Project</h4>
+                        </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
