Format trending panel of dashboard

--- a/index.html
+++ b/index.html
@@ -209,8 +209,45 @@
                     </div>
                 </div>
             </div>
-            <div class="trending-title"></div>
-            <div class="trending-container"></div>
+            <div class="trending-title">
+                <h4>Trending</h4>
+            </div>
+            <div class="trending-container">
+                <div class="trending">
+                    <div class="other-profile">
+                        <div><img src="images/account-circle.png" alt="account-circle icon"></div>
+                        <div class="other-profile-title">
+                            <h4>@tegan</h4>
+                            <p>World Peace Builder</p>
+                        </div>
+                    </div>
+
+                    <div class="other-profile">
+                        <div><img src="images/account-circle.png" alt="account-circle icon"></div>
+                        <div class="other-profile-title">
+                            <h4>@morgan</h4>
+                            <p>Super Cool Project</p>
+                        </div>
+                    </div>
+
+                    <div class="other-profile">
+                        <div><img src="images/account-circle.png" alt="account-circle icon"></div>
+                        <div class="other-profile-title">
+                            <h4>@kendall</h4>
+                            <p>Life Changing App</p>
+                        </div>
+                    </div>
+
+                    <div class="other-profile">
+                        <div><img src="images/account-circle.png" alt="account-circle icon"></div>
+                        <div class="other-profile-title">
+                            <h4>@alex</h4>
+                            <p>No Traffic Maker</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </div>   
     </body>
 </html>
