Change .side-bar to aside element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <div class="side-board">
+        <aside>
             <img src="images/dashboard-logo.png" alt="dashboard icon">
             <h2>Dashboard</h2>
 
@@ -47,7 +47,7 @@
             <h4><a href="#">Privacy</a></h4>
 
             
-        </div>
+        </aside>
         <div class="header">
             <div class="top">
                 <div class="search-bar">
