Convert .header element to header element

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             
         </aside>
-        <div class="header">
+        <header>
             <div class="top">
                 <div class="search-bar">
                     <img id="search-icon" src="images/search.png" alt="search icon">
@@ -84,7 +84,7 @@
                     <button>Share</button>
                 </div>
             </div>
-        </div>
+        </header>
         <div class="body">
             <div class="grid-title">
                 <h4 id="projects-title">Your Projects</h4>
