Replace .body with main tag

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </header>
-        <div class="body">
+        <main>
             <div class="grid-title">
                 <h4 id="projects-title">Your Projects</h4>
                 <h4 id="announcements-title">Announcements</h4>
@@ -248,6 +248,6 @@
 
                 </div>
             </div>
-        </div>   
+        </main>   
     </body>
 </html>
