Change h1, h2 etc elements to correct responsive hierarchy

--- a/index.html
+++ b/index.html
@@ -11,40 +11,40 @@
     <body>
         <aside>
             <img src="images/dashboard-logo.png" alt="dashboard icon">
-            <h2>Dashboard</h2>
+            <h1>Dashboard</h1>
 
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
             <a href="#"><img src="images/home.png" alt="home icon"></a>
-            <h4><a href="#">Home</a></h4>
+            <h2><a href="#">Home</a></h2>
 
             <a href="#"><img src="images/profile.png" alt="profile icon"></a>
-            <h4><a href="#">Profile</a></h4>
+            <h2><a href="#">Profile</a></h2>
 
             <a href="#"><img src="images/message.png" alt="message icon"></a>
-            <h4><a href="#">Message</a></h4>
+            <h2><a href="#">Message</a></h2>
 
             <a href="#"><img src="images/history.png" alt="history icon"></a>
-            <h4><a href="#">History</a></h4>
+            <h2><a href="#">History</a></h2>
 
             <a href="#"><img src="images/tasks.png" alt="tasks icon"></a>
-            <h4><a href="#">Tasks</a></h4>
+            <h2><a href="#">Tasks</a></h2>
 
             <a href="#"><img src="images/communities.png" alt="communities icon"></a>
-            <h4><a href="#">Communities</a></h4>
+            <h2><a href="#">Communities</a></h2>
 
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
             <a href="#"><img src="images/settings.png" alt="settings icon"></a>
-            <h4><a href="#">Settings</a></h4>
+            <h2><a href="#">Settings</a></h2>
 
             <a href="#"><img src="images/support.png" alt="support icon"></a>
-            <h4><a href="#">Support</a></h4>
+            <h2><a href="#">Support</a></h2>
 
             <a href="#"><img src="images/privacy.png" alt="privacy icon"></a>
-            <h4><a href="#">Privacy</a></h4>
+            <h2><a href="#">Privacy</a></h2>
 
             
         </aside>
@@ -73,7 +73,7 @@
                         <p>Hi there,</p>
                         <a href="#">
                             <b>
-                                <h4>Morgan Stanley (@morgan)</h4>
+                                <p>Morgan Stanley (@morgan)</p>
                             </b>
                         </a>
                     </div>
@@ -87,15 +87,15 @@
         </header>
         <main>
             <div class="grid-title">
-                <h4 id="projects-title">Your Projects</h4>
-                <h4 id="announcements-title">Announcements</h4>
+                <h2 id="projects-title">Your Projects</h2>
+                <h2 id="announcements-title">Announcements</h2>
             </div>
             <div class="grid-container">
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
                         <b>
-                            <h4>Super Cool Project</h4>
+                            <h3>Super Cool Project</h3>
                         </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
@@ -112,7 +112,7 @@
                     <div class="orange-stripe"></div>
                     <div class="main-card">
                         <b>
-                            <h4>Super Cool Project</h4>
+                            <h3>Super Cool Project</h3>
                         </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
@@ -129,7 +129,7 @@
                     <div class="orange-stripe"></div>
                     <div class="main-card">
                         <b>
-                            <h4>Super Cool Project</h4>
+                            <h3>Super Cool Project</h3>
                         </b>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
@@ -145,7 +145,7 @@
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <h3>Super Cool Project</h3>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
@@ -160,7 +160,7 @@
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <h3>Super Cool Project</h3>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
@@ -175,7 +175,7 @@
                 <div class="card-container">
                     <div class="orange-stripe"></div>
                     <div class="main-card">
-                        <h4>Super Cool Project</h4>
+                        <h3>Super Cool Project</h3>
                         <p>Here is a cool project. Describe it will
                             all of your heart! Sed tempus ut
                             lacus ut scelerisque nibh erat, id facilisis felis accumsan nec.
@@ -191,18 +191,18 @@
             <div class="announcements-container">
                 <div class="announcements">
                     <div>
-                        <h4>Site Maintenance</h4>
+                        <h3>Site Maintenance</h3>
                         <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec
                             hendrerit sodales congue...</p>
                     </div>
                     <hr>
                     <div>
-                        <h4>Community Share Day</h4>
+                        <h3>Community Share Day</h3>
                         <p>Nam vel lectus tincidunt, rutrum nulla eu, ornarere librero. Aliquam dictum accumsan portitior...</p>
                     </div>
                     <hr>
                     <div>
-                        <h4>Updated Privacy Policy</h4>
+                        <h3>Updated Privacy Policy</h3>
                         <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla
                             sagittis sem in mattis...
                         </p>
@@ -210,14 +210,14 @@
                 </div>
             </div>
             <div class="trending-title">
-                <h4>Trending</h4>
+                <h2>Trending</h2>
             </div>
             <div class="trending-container">
                 <div class="trending">
                     <div class="other-profile">
                         <div><img src="images/account-circle.png" alt="account-circle icon"></div>
                         <div class="other-profile-title">
-                            <h4>@tegan</h4>
+                            <h3>@tegan</h3>
                             <p>World Peace Builder</p>
                         </div>
                     </div>
@@ -225,7 +225,7 @@
                     <div class="other-profile">
                         <div><img src="images/account-circle.png" alt="account-circle icon"></div>
                         <div class="other-profile-title">
-                            <h4>@morgan</h4>
+                            <h3>@morgan</h3>
                             <p>Super Cool Project</p>
                         </div>
                     </div>
@@ -233,7 +233,7 @@
                     <div class="other-profile">
                         <div><img src="images/account-circle.png" alt="account-circle icon"></div>
                         <div class="other-profile-title">
-                            <h4>@kendall</h4>
+                            <h3>@kendall</h3>
                             <p>Life Changing App</p>
                         </div>
                     </div>
@@ -241,7 +241,7 @@
                     <div class="other-profile">
                         <div><img src="images/account-circle.png" alt="account-circle icon"></div>
                         <div class="other-profile-title">
-                            <h4>@alex</h4>
+                            <h3>@alex</h3>
                             <p>No Traffic Maker</p>
                         </div>
                     </div>
