Add description to alt of images with links

--- a/index.html
+++ b/index.html
@@ -10,40 +10,40 @@
 
     <body>
         <aside>
-            <img src="images/dashboard-logo.png" alt="dashboard icon">
+            <img src="images/dashboard-logo.png" alt="">
             <h1>Dashboard</h1>
 
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
-            <a href="#"><img src="images/home.png" alt="home icon"></a>
+            <a href="#"><img src="images/home.png" alt="Home"></a>
             <h2><a href="#">Home</a></h2>
 
-            <a href="#"><img src="images/profile.png" alt="profile icon"></a>
+            <a href="#"><img src="images/profile.png" alt="Profile"></a>
             <h2><a href="#">Profile</a></h2>
 
-            <a href="#"><img src="images/message.png" alt="message icon"></a>
+            <a href="#"><img src="images/message.png" alt="Message"></a>
             <h2><a href="#">Message</a></h2>
 
-            <a href="#"><img src="images/history.png" alt="history icon"></a>
+            <a href="#"><img src="images/history.png" alt="History"></a>
             <h2><a href="#">History</a></h2>
 
-            <a href="#"><img src="images/tasks.png" alt="tasks icon"></a>
+            <a href="#"><img src="images/tasks.png" alt="Tasks"></a>
             <h2><a href="#">Tasks</a></h2>
 
-            <a href="#"><img src="images/communities.png" alt="communities icon"></a>
+            <a href="#"><img src="images/communities.png" alt="Communities"></a>
             <h2><a href="#">Communities</a></h2>
 
             <div class="empty-cell"></div>
             <div class="empty-cell"></div>
 
-            <a href="#"><img src="images/settings.png" alt="settings icon"></a>
+            <a href="#"><img src="images/settings.png" alt="Settings"></a>
             <h2><a href="#">Settings</a></h2>
 
-            <a href="#"><img src="images/support.png" alt="support icon"></a>
+            <a href="#"><img src="images/support.png" alt="Support"></a>
             <h2><a href="#">Support</a></h2>
 
-            <a href="#"><img src="images/privacy.png" alt="privacy icon"></a>
+            <a href="#"><img src="images/privacy.png" alt="Privacy"></a>
             <h2><a href="#">Privacy</a></h2>
 
             
